create user input key sequence detector

--- a/qucs/qucs/dialogs/CMakeLists.txt
+++ b/qucs/qucs/dialogs/CMakeLists.txt
@@ -36,7 +36,7 @@ importdialog.cpp		savedialog.cpp labeldialog.cpp
 searchdialog.cpp     librarydialog.cpp settingsdialog.cpp
 matchdialog.cpp			simmessage.cpp newprojdialog.cpp
 sweepdialog.cpp			exportdialog.cpp loaddialog.cpp
-aboutdialog.cpp
+aboutdialog.cpp                 keysequenceedit.cpp
 )
 
 SET(DIALOGS_MOC_HDRS
@@ -59,6 +59,7 @@ simmessage.h
 sweepdialog.h
 sweepdialog.h
 vasettingsdialog.h
+keysequenceedit.h
 )
 
 SET(DIALOGS_UIC_HDRS
