Added CAPQ component

--- a/qucs/qucs/components/CMakeLists.txt
+++ b/qucs/qucs/components/CMakeLists.txt
@@ -53,7 +53,7 @@ d_flipflop.cpp		log_amp.cpp		phaseshifter.cpp	vpulse.cpp
 dc_sim.cpp		logic_0.cpp		photodiode.cpp		vrect.cpp
 dcblock.cpp		logic_1.cpp		phototransistor.cpp
 dcfeed.cpp		logical_and.cpp		pm_modulator.cpp
-bsim4v30nMOS.cpp        taperedline.cpp
+bsim4v30nMOS.cpp        capq.cpp
 bsim4v30pMOS.cpp
 vcresistor.cpp
 vacomponent.cpp
@@ -81,6 +81,7 @@ bsim3v34pMOS.h
 bsim4v30nMOS.h
 bsim4v30pMOS.h
 capacitor.h
+capq.h
 cccs.h
 ccvs.h
 circulator.h
@@ -117,7 +118,6 @@ EKV26MOS.h
 eqndefined.h
 equation.h
 etr_sim.h
-taperedline.h
 fa1b.h
 fa2b.h
 gatedDlatch.h
