--- a/qucs/qucs/components/CMakeLists.txt
+++ b/qucs/qucs/components/CMakeLists.txt
@@ -52,7 +52,7 @@ ctline.cpp		libcomp.cpp		param_sweep.cpp		vprobe.cpp
 d_flipflop.cpp		log_amp.cpp		phaseshifter.cpp	vpulse.cpp
 dc_sim.cpp		logic_0.cpp		photodiode.cpp		vrect.cpp
 dcblock.cpp		logic_1.cpp		phototransistor.cpp     spiralinductor.cpp
-dcfeed.cpp		logical_and.cpp		pm_modulator.cpp
+dcfeed.cpp		logical_and.cpp		pm_modulator.cpp        circularloop.cpp
 bsim4v30nMOS.cpp        capq.cpp                indq.cpp
 bsim4v30pMOS.cpp
 vcresistor.cpp
@@ -84,6 +84,7 @@ capacitor.h
 capq.h
 cccs.h
 ccvs.h
+circularloop.h
 circulator.h
 coaxialline.h
 comp_1bit.h
