--- a/qucs-core/src/components/microstrip/Makefile.am
+++ b/qucs-core/src/components/microstrip/Makefile.am
@@ -29,12 +29,13 @@ noinst_LTLIBRARIES = libmicrostrip.la
 libmicrostrip_la_SOURCES = substrate.cpp msline.cpp mscorner.cpp msmbend.cpp   \
 	msstep.cpp msopen.cpp msgap.cpp mscoupled.cpp mslange.cpp mstee.cpp mscross.cpp   \
 	msvia.cpp cpwline.cpp cpwopen.cpp cpwshort.cpp cpwgap.cpp cpwstep.cpp \
-	bondwire.cpp msrstub.cpp spiralinductor.cpp circularloop.cpp squareinductor.cpp
+	bondwire.cpp msrstub.cpp spiralinductor.cpp circularloop.cpp squareinductor.cpp \
+        hexagonalinductor.cpp octogonalinductor.cpp
 
 noinst_HEADERS = substrate.h msline.h mscorner.h msmbend.h msstep.h msopen.h \
 	msgap.h mscoupled.h mslange.cpp mstee.h mscross.h msvia.h cpwline.h cpwopen.h    \
 	cpwshort.h cpwgap.h cpwstep.h bondwire.h msrstub.h spiralinductor.h circularloop.h \
-        squareinductor.h
+        squareinductor.h hexagonalinductor.h octogonalinductor.h
 
 AM_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/src/math \
   -I$(top_srcdir)/src/components -I$(top_srcdir)/src/components/devices
