--- a/qucs/qucs/components/Makefile.am
+++ b/qucs/qucs/components/Makefile.am
@@ -62,7 +62,7 @@ libcomponents_a_SOURCES = phaseshifter.cpp gyrator.cpp componentdialog.cpp    \
   hicumL2V2p31n.cpp  bsim3v34nMOS.cpp bsim3v34pMOS.cpp bsim4v30nMOS.cpp       \
   bsim4v30pMOS.cpp etr_sim.cpp ecvs.cpp vcresistor.cpp vacomponent.cpp        \
   mutualx.cpp capq.cpp indq.cpp spiralinductor.cpp circularloop.cpp squareinductor.cpp \
-  hexagonalinductor.cpp octogonalinductor.cpp
+  hexagonalinductor.cpp octogonalinductor.cpp mimcap.cpp
 
 nodist_libcomponents_a_SOURCES = $(MOCFILES)
 
@@ -94,7 +94,7 @@ noinst_HEADERS = $(MOCHEADERS) resistor.h components.h capacitor.h vccs.h     \
   hicumL0V1p3.h hicumL2V2p31n.h  bsim3v34nMOS.h bsim3v34pMOS.h bsim4v30nMOS.h \
   bsim4v30pMOS.h etr_sim.h ecvs.h vcresistor.h vacomponent.h                  \
   mutualx.h capq.h indq.h spiralinductor.h circularloop.h squareinductor.h \
-  hexagonalinductor.h octogonalinductor.h
+  hexagonalinductor.h octogonalinductor.h mimcap.h
 
 AM_CPPFLAGS = $(X11_INCLUDES) $(QT_INCLUDES) -I$(top_srcdir)/qucs
 
