--- a/qucs-core/src/components/CMakeLists.txt
+++ b/qucs-core/src/components/CMakeLists.txt
@@ -8,6 +8,7 @@ SET( COMPONENTS_SRC
   attenuator.cpp
   biastee.cpp
   capacitor.cpp
+  capq.cpp
   cccs.cpp
   ccvs.cpp
   circulator.cpp
@@ -27,6 +28,7 @@ SET( COMPONENTS_SRC
   ifile.cpp
   iinoise.cpp
   inductor.cpp
+  indq.cpp
   inoise.cpp
   iprobe.cpp
   ipulse.cpp
