Planar circular loop inductor
Added a circular loop inductor model (S-parameter simulation)

References:
[1] I. Bahl, Fundamentals of RF and Microwave Transistor Amplifiers,
John Wiley and Sons, 2009.

--- a/qucs/qucs/components/CMakeLists.txt
+++ b/qucs/qucs/components/CMakeLists.txt
@@ -53,7 +53,7 @@ d_flipflop.cpp		log_amp.cpp		phaseshifter.cpp	vpulse.cpp
 dc_sim.cpp		logic_0.cpp		photodiode.cpp		vrect.cpp
 dcblock.cpp		logic_1.cpp		phototransistor.cpp     capq.cpp
 dcfeed.cpp		logical_and.cpp		pm_modulator.cpp        indq.cpp
-bsim4v30nMOS.cpp        spiralinductor.cpp
+bsim4v30nMOS.cpp        spiralinductor.cpp      circularloop.cpp
 bsim4v30pMOS.cpp
 vcresistor.cpp
 vacomponent.cpp
@@ -85,6 +85,7 @@ capq.h
 cccs.h
 ccvs.h
 circulator.h
+circularloop.h
 coaxialline.h
 comp_1bit.h
 comp_2bit.h
