--- a/qucs/qucs/components/CMakeLists.txt
+++ b/qucs/qucs/components/CMakeLists.txt
@@ -53,7 +53,7 @@ d_flipflop.cpp		log_amp.cpp		phaseshifter.cpp	vpulse.cpp
 dc_sim.cpp		logic_0.cpp		photodiode.cpp		vrect.cpp
 dcblock.cpp		logic_1.cpp		phototransistor.cpp     capq.cpp
 dcfeed.cpp		logical_and.cpp		pm_modulator.cpp        indq.cpp
-bsim4v30nMOS.cpp        spiralinductor.cpp      circularloop.cpp
+bsim4v30nMOS.cpp        spiralinductor.cpp      circularloop.cpp        coil.cpp
 bsim4v30pMOS.cpp
 vcresistor.cpp
 vacomponent.cpp
@@ -87,6 +87,7 @@ ccvs.h
 circulator.h
 circularloop.h
 coaxialline.h
+coil.h
 comp_1bit.h
 comp_2bit.h
 comp_4bit.h
