--- a/qucs-core/src/components/Makefile.am
+++ b/qucs-core/src/components/Makefile.am
@@ -37,8 +37,8 @@ libcomponent_la_SOURCES = attenuator.cpp dcblock.cpp open.cpp vccs.cpp        \
 	irect.cpp amplifier.cpp opamp.cpp iinoise.cpp mutual.cpp mutual2.cpp \
 	vvnoise.cpp ivnoise.cpp coupler.cpp coaxline.cpp vprobe.cpp vam.cpp  \
 	vpm.cpp tswitch.cpp relais.cpp short.cpp twistedpair.cpp tline4p.cpp \
-	vexp.cpp iexp.cpp mutualx.cpp vfile.cpp ifile.cpp rfedd.cpp          \
-	rectline.cpp rlcg.cpp hybrid.cpp ctline.cpp ecvs.cpp circline.cpp
+        vexp.cpp iexp.cpp mutualx.cpp vfile.cpp ifile.cpp rfedd.cpp          \
+        rectline.cpp rlcg.cpp hybrid.cpp ctline.cpp ecvs.cpp ohmmeter.cpp circline.cpp
 
 pkginclude_HEADERS = component.h components.h component_id.h
 
@@ -51,7 +51,7 @@ noinst_HEADERS = attenuator.h dcblock.h open.h vccs.h biastee.h circulator.h \
 	vvnoise.h ivnoise.h coupler.h coaxline.h vprobe.h vam.h vpm.h        \
 	tswitch.h relais.h short.h twistedpair.h tline4p.h vexp.h iexp.h     \
 	mutualx.h vfile.h ifile.h rfedd.h rectline.h components.h rlcg.h     \
-	hybrid.h ctline.h ecvs.h \
+        hybrid.h ctline.h ecvs.h ohmmeter.h \
 	component.h components.h component_id.h circline.h
 
 AM_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/src/math
