--- a/qucs-core/doc/qucsator.1.in
+++ b/qucs-core/doc/qucsator.1.in
@@ -45,10 +45,10 @@ special progress bar used by gui
 check the input netlist and exit
 .SH AVAILABILITY
 The latest version of Qucs can always be obtained from
-\fBwww.sourceforge.net\fR or \fBwww.freshmeat.net\fR
+\fB@PACKAGE_URL@\fR
 .SH "REPORTING BUGS"
 Known bugs are documented within the BUGS file.  Report bugs to
-<qucs-bugs@lists.sourceforge.net>.
+\fB@PACKAGE_BUGREPORT@\fR
 .SH COPYRIGHT
 Copyright \(co 2003, 2004, 2005, 2006, 2007 Stefan Jahn <stefan@lkcc.org>
 .br
