--- a/qucs/qucs-activefilter/qucsactivefilter.1.in
+++ b/qucs/qucs-activefilter/qucsactivefilter.1.in
@@ -28,10 +28,10 @@ Available topologies are: Sallen-Key, Multifeedback and Cauer.
 
 .SH AVAILABILITY
 The latest version of Qucs can always be obtained from
-\fBwww.sourceforge.net\fR or \fBwww.freshmeat.net\fR
+\fB@PACKAGE_URL@\fR
 .SH "REPORTING BUGS"
 Known bugs are documented within the BUGS file.  Report bugs to
-<qucs-bugs@lists.sourceforge.net>.
+\fB@PACKAGE_BUGREPORT@\fR
 .SH COPYRIGHT
 Copyright \(co 2005 Michael Margraf <michael.margraf@alumni.tu-berlin.de>
 .PP
