--- a/qucs/qucs-attenuator/qucsattenuator.1.in
+++ b/qucs/qucs-attenuator/qucsattenuator.1.in
@@ -27,10 +27,10 @@ Available attenuator topologies types are: Tee, Pi and Bridged-Tee.
 
 .SH AVAILABILITY
 The latest version of Qucs can always be obtained from
-\fBwww.sourceforge.net\fR or \fBwww.freshmeat.net\fR
+\fB@PACKAGE_URL@\fR
 .SH "REPORTING BUGS"
 Known bugs are documented within the BUGS file.  Report bugs to
-<qucs-bugs@lists.sourceforge.net>.
+\fB@PACKAGE_BUGREPORT@\fR
 .SH COPYRIGHT
 Copyright \(co 2006 Michael Margraf <michael.margraf@alumni.tu-berlin.de>
 .PP
