--- a/qucs-core/doc/qucsconv.1.in
+++ b/qucs-core/doc/qucsconv.1.in
@@ -48,10 +48,10 @@ data variable specification
 enable node correction
 .SH AVAILABILITY
 The latest version of Qucs can always be obtained from
-\fBwww.sourceforge.net\fR or \fBwww.freshmeat.net\fR
+\fB@PACKAGE_URL@\fR
 .SH "REPORTING BUGS"
 Known bugs are documented within the BUGS file.  Report bugs to
-<qucs-bugs@lists.sourceforge.net>.
+\fB@PACKAGE_BUGREPORT@\fR
 .SH COPYRIGHT
 Copyright \(co 2004, 2005, 2006, 2007, 2009 Stefan Jahn <stefan@lkcc.org>
 .PP
