--- a/qucs/man/qucs.1.in
+++ b/qucs/man/qucs.1.in
@@ -23,10 +23,10 @@ project but may also be used by other applications.
 
 .SH AVAILABILITY
 The latest version of Qucs can always be obtained from
-\fBwww.sourceforge.net\fR or \fBwww.freshmeat.net\fR
+\fB@PACKAGE_URL@\fR
 .SH "REPORTING BUGS"
 Known bugs are documented within the BUGS file.  Report bugs to
-<qucs-bugs@lists.sourceforge.net>.
+\fB@PACKAGE_BUGREPORT@\fR
 .SH COPYRIGHT
 Copyright \(co 2003, 2004, 2005 Michael Margraf <michael.margraf@alumni.tu-berlin.de>
 .PP
