--- a/qucs-core/CMakeLists.txt
+++ b/qucs-core/CMakeLists.txt
@@ -97,6 +97,12 @@ SET(PROJECT_COPYRIGHT_YEAR "2013")
 SET(PROJECT_DOMAIN_FIRST "qucs")
 SET(PROJECT_DOMAIN_SECOND "org")
 
+SET(QUCS_URL "https://sf.net/p/qucs")
+SET(QUCS_BUGREPORT "qucs-bugs@lists.sourceforge.net")
+
+configure_file(./doc/qucsconv.1.cmake.in ./doc/qucsconv.1)
+configure_file(./doc/qucsator.1.cmake.in ./doc/qucsator.1)
+
 # use last git commit hash along the version
 set(GIT unknown)
 IF(EXISTS ${CMAKE_SOURCE_DIR}/../.git )
